edited character blueprint and added new blurprint

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -158,15 +158,27 @@ Test_BP_C.Rendering=True
 Test_BP_C.Collision=True
 Test_BP_C.Actor=True
 Test_BP_C.Input=True
+ThirdPersonCharacter_C.Default=True
+ThirdPersonCharacter_C.Tick=True
+ThirdPersonCharacter_C.Character=True
+ThirdPersonCharacter_C.Camera=True
+ThirdPersonCharacter_C.Pawn=True
+ThirdPersonCharacter_C.Replication=True
+ThirdPersonCharacter_C.Rendering=True
+ThirdPersonCharacter_C.Collision=True
+ThirdPersonCharacter_C.Actor=True
+ThirdPersonCharacter_C.Input=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Test_BP
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem1=/Game/ThirdPersonBP/Test_BP
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Test_BP.Test_BP=1
+/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -189,7 +201,6 @@ FourPanes2x2.Viewport 1.Viewport3.TypeWithinLayout=Default
 FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
-<<<<<<< Updated upstream
 [Directories2]
 UNR=../../../../Projects/Medusa/Content/ThirdPersonBP/Maps
 BRUSH=../../../../Projects/Medusa/Content/
@@ -1001,6 +1012,5 @@ MovieSceneCapture.TimeStamp=2020.05.13-19.25.14
 MovieSceneCapture.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2020.05.13-19.25.06
 BlueprintGraph.LastCompileMethod=Unknown
+None=======
 
-=======
->>>>>>> Stashed changes
