--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -195,8 +195,7 @@ AudioCurveSourceComponent.Cooking=True
 None=======
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
+CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
@@ -1037,9 +1036,9 @@ Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2020.05.13-19.25.14
 MovieSceneCapture.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2020.05.13-20.07.08
-BlueprintGraph.TimeStamp=2020.05.13-19.25.06
+BlueprintGraph.TimeStamp=2020.05.13-20.07.08
 BlueprintGraph.LastCompileMethod=External
-BlueprintGraph.LastCompileMethod=Unknown
+BlueprintGraph.LastCompileMethod=External
 None=======
 None=======
 
