--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,6 +134,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
 
 [EditorStartup]
 LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
@@ -168,6 +169,8 @@ ThirdPersonCharacter_C.Rendering=True
 ThirdPersonCharacter_C.Collision=True
 ThirdPersonCharacter_C.Actor=True
 ThirdPersonCharacter_C.Input=True
+ThirdPersonCharacter_C.LOD=True
+ThirdPersonCharacter_C.Cooking=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1013,4 +1016,9 @@ MovieSceneCapture.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2020.05.13-19.25.06
 BlueprintGraph.LastCompileMethod=Unknown
 None=======
+
+[DetailPropertyExpansion]
+ThirdPersonCharacter_C="\"Object.Replication.ReplicatedMovement\" "
+Character="\"Object.Replication.ReplicatedMovement\" "
+Pawn="\"Object.Replication.ReplicatedMovement\" "
 
