--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -173,7 +173,7 @@ ThirdPersonCharacter_C.LOD=True
 ThirdPersonCharacter_C.Cooking=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
