--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -171,9 +171,60 @@ ThirdPersonCharacter_C.Actor=True
 ThirdPersonCharacter_C.Input=True
 ThirdPersonCharacter_C.LOD=True
 ThirdPersonCharacter_C.Cooking=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+AudioCurveSourceComponent.TransformCommon=True
+AudioCurveSourceComponent.Warning=True
+AudioCurveSourceComponent.Curves=True
+AudioCurveSourceComponent.Sound=True
+AudioCurveSourceComponent.Attenuation=True
+AudioCurveSourceComponent.AttenuationDistance=True
+AudioCurveSourceComponent.AttenuationSpatialization=True
+AudioCurveSourceComponent.Filter=True
+AudioCurveSourceComponent.Attachment=True
+AudioCurveSourceComponent.AttenuationAirAbsorption=True
+AudioCurveSourceComponent.AttenuationListenerFocus=True
+AudioCurveSourceComponent.Modulation=True
+AudioCurveSourceComponent.AttenuationReverbSend=True
+AudioCurveSourceComponent.Concurrency=True
+AudioCurveSourceComponent.AttenuationOcclusion=True
+AudioCurveSourceComponent.AttenuationPriority=True
+AudioCurveSourceComponent.AttenuationSubmixSend=True
+AudioCurveSourceComponent.Tags=True
+AudioCurveSourceComponent.AttenuationPluginSettings=True
+AudioCurveSourceComponent.ComponentReplication=True
+AudioCurveSourceComponent.Activation=True
+AudioCurveSourceComponent.Variable=True
+AudioCurveSourceComponent.Cooking=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
@@ -1018,7 +1069,7 @@ BlueprintGraph.LastCompileMethod=Unknown
 None=======
 
 [DetailPropertyExpansion]
-ThirdPersonCharacter_C="\"Object.Replication.ReplicatedMovement\" "
-Character="\"Object.Replication.ReplicatedMovement\" "
-Pawn="\"Object.Replication.ReplicatedMovement\" "
+ThirdPersonCharacter_C=
+Character=
+Pawn=
 
