Boo is Gay Phase 3

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -221,9 +221,12 @@ AudioCurveSourceComponent.ComponentReplication=True
 AudioCurveSourceComponent.Activation=True
 AudioCurveSourceComponent.Variable=True
 AudioCurveSourceComponent.Cooking=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+K2Node_SwitchInteger.PinOptions=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
